--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "prepended"
+        "Podfile",
+        "CocoaPods",
+        "prepended",
+        "centralised",
+        "discoverability"
     ]
 }
