--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
         "MVVM",
         "Podfile",
         "PODNAME",
-        "prepended"
+        "podspec",
+        "prepended",
+        "xcodeproj",
+        "xcworkspace"
     ]
 }
