--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "CocoaPods",
         "Deinitialization",
         "discoverability",
+        "favourite",
         "MVVM",
         "Podfile",
         "PODNAME",
