Add Ruby documents.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,16 @@
         "Deinitialization",
         "discoverability",
         "favourite",
+        "ibireme",
         "MVVM",
         "Podfile",
         "PODNAME",
         "podspec",
         "prepended",
         "SRCROOT",
+        "sunnyxx",
         "xcodeproj",
-        "xcworkspace"
+        "xcworkspace",
+        "Yilong"
     ]
 }
