Add *NIX documents

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "favourite",
         "ibireme",
         "MVVM",
+        "mypath",
         "pacman",
         "Podfile",
         "PODNAME",
