Add pyenv document

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,11 @@
         "PODNAME",
         "podspec",
         "prepended",
+        "pyenv",
+        "readline",
         "SRCROOT",
         "sunnyxx",
+        "virtualenv",
         "xcodeproj",
         "xcworkspace",
         "Yilong"
