--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "PODNAME",
         "podspec",
         "prepended",
+        "prepending",
         "pyenv",
         "readline",
         "SRCROOT",
