--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "prepended",
         "prepending",
         "pyenv",
+        "pypy",
         "readline",
         "SRCROOT",
         "sunnyxx",
