--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "readline",
         "SRCROOT",
         "sunnyxx",
+        "venv",
         "virtualenv",
         "xcodeproj",
         "xcworkspace",
