Add RubyGems Documents.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,9 @@
         "prepending",
         "pyenv",
         "pypy",
+        "rbtree",
         "readline",
+        "rubygems",
         "SRCROOT",
         "sunnyxx",
         "venv",
