Update "RubyGems Basics"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "Deinitialization",
         "discoverability",
         "favourite",
+        "gemdir",
+        "gempath",
         "ibireme",
         "MVVM",
         "mypath",
@@ -20,6 +22,7 @@
         "pypy",
         "rbtree",
         "readline",
+        "remotesources",
         "rubygems",
         "SRCROOT",
         "sunnyxx",
