--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "prepending",
         "pyenv",
         "pypy",
+        "Rakefile",
         "rbtree",
         "readline",
         "remotesources",
