Update "RubyGems Basics"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "discoverability",
         "favourite",
         "gemdir",
+        "GEMNAME",
         "gempath",
         "ibireme",
         "MVVM",
