--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "ibireme",
         "MVVM",
         "mypath",
+        "nokogiri",
         "pacman",
         "Podfile",
         "PODNAME",
@@ -25,6 +26,7 @@
         "rbtree",
         "readline",
         "remotesources",
+        "rubocop",
         "rubygems",
         "SRCROOT",
         "sunnyxx",
