Add document for Homebrew.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Alamofire",
         "Autorelease",
+        "behaviour",
         "centralised",
         "CocoaPods",
         "Deinitialization",
@@ -11,6 +12,8 @@
         "GEMNAME",
         "gempath",
         "ibireme",
+        "linuxbrew",
+        "mkdir",
         "MVVM",
         "mypath",
         "nokogiri",
@@ -28,8 +31,10 @@
         "remotesources",
         "rubocop",
         "rubygems",
+        "shellenv",
         "SRCROOT",
         "sunnyxx",
+        "Uninstallation",
         "venv",
         "virtualenv",
         "xcodeproj",
