Update the documents of Homebrew.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,42 +1,91 @@
 {
     "cSpell.words": [
+        "aclocal",
         "Alamofire",
+        "appdir",
+        "archlinux",
+        "automake",
+        "automerge",
         "Autorelease",
+        "autoremove",
+        "autosquash",
+        "autosquashing",
         "behaviour",
+        "BOOTSNAP",
+        "Brewfile",
         "centralised",
+        "CMAKE",
         "CocoaPods",
+        "colorpickerdir",
+        "coreutils",
         "Deinitialization",
+        "deps",
+        "destdir",
+        "dictionarydir",
         "discoverability",
+        "dotfiles",
         "favourite",
+        "fontdir",
         "gemdir",
         "GEMNAME",
         "gempath",
+        "gettext",
         "ibireme",
+        "icestorm",
+        "idempotence",
+        "INFOPATH",
+        "LIBDIR",
+        "libgpg",
+        "libidn",
+        "libksba",
+        "libunistring",
+        "libyaml",
         "linuxbrew",
+        "macports",
+        "MAKEFLAGS",
+        "MANPATH",
+        "mdimporterdir",
+        "methoddir",
         "mkdir",
         "MVVM",
         "mypath",
         "nokogiri",
+        "octa",
         "pacman",
+        "pcre",
+        "pkgconfig",
+        "plugindir",
         "Podfile",
         "PODNAME",
         "podspec",
+        "prefpanedir",
         "prepended",
         "prepending",
         "pyenv",
         "pypy",
+        "qlplugindir",
         "Rakefile",
         "rbtree",
+        "readall",
         "readline",
         "remotesources",
+        "repology",
         "rubocop",
         "rubygems",
+        "saverdir",
+        "SDKROOT",
+        "servicedir",
         "shellenv",
         "SRCROOT",
         "sunnyxx",
+        "tinypng",
+        "Typecheck",
+        "unbottled",
+        "unbrewed",
         "Uninstallation",
         "venv",
         "virtualenv",
+        "WHALEBREW",
         "xcodeproj",
         "xcworkspace",
         "Yilong"
