Update documents of Homebrew.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "libunistring",
         "libyaml",
         "linuxbrew",
+        "livecheck",
         "macports",
         "MAKEFLAGS",
         "MANPATH",
@@ -68,6 +69,7 @@
         "rbtree",
         "readall",
         "readline",
+        "rebottle",
         "remotesources",
         "repology",
         "rubocop",
@@ -83,6 +85,7 @@
         "unbottled",
         "unbrewed",
         "Uninstallation",
+        "unversioned",
         "venv",
         "virtualenv",
         "WHALEBREW",
