Add ShellCheck document

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,16 +14,21 @@
         "BOOTSNAP",
         "Brewfile",
         "centralised",
+        "choco",
         "CMAKE",
         "CocoaPods",
+        "Codacy",
         "colorpickerdir",
+        "conda",
         "coreutils",
         "Deinitialization",
         "deps",
         "destdir",
         "dictionarydir",
         "discoverability",
+        "distros",
         "dotfiles",
+        "EPEL",
         "favourite",
         "fontdir",
         "gemdir",
@@ -34,6 +39,7 @@
         "icestorm",
         "idempotence",
         "INFOPATH",
+        "koalaman",
         "LIBDIR",
         "libgpg",
         "libidn",
@@ -50,6 +56,9 @@
         "mkdir",
         "MVVM",
         "mypath",
+        "myscript",
+        "myscripts",
+        "nixpkgs",
         "nokogiri",
         "octa",
         "pacman",
@@ -77,6 +86,7 @@
         "saverdir",
         "SDKROOT",
         "servicedir",
+        "shellcheck",
         "shellenv",
         "SRCROOT",
         "sunnyxx",
@@ -85,6 +95,7 @@
         "unbottled",
         "unbrewed",
         "Uninstallation",
+        "Unportable",
         "unversioned",
         "venv",
         "virtualenv",
