--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "behaviour",
         "BOOTSNAP",
         "Brewfile",
+        "Cartfile",
         "centralised",
         "choco",
         "CMAKE",
@@ -78,6 +79,7 @@
         "rbtree",
         "readall",
         "readline",
+        "realpath",
         "rebottle",
         "remotesources",
         "repology",
@@ -87,6 +89,7 @@
         "SDKROOT",
         "servicedir",
         "shellcheck",
+        "shellcheckrc",
         "shellenv",
         "SRCROOT",
         "sunnyxx",
