--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,7 @@
         "Typecheck",
         "unbottled",
         "unbrewed",
+        "unbuffered",
         "Uninstallation",
         "Unportable",
         "unversioned",
