--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "conda",
         "coreutils",
         "Deinitialization",
+        "delim",
         "deps",
         "destdir",
         "dictionarydir",
@@ -92,6 +93,7 @@
         "shellcheckrc",
         "shellenv",
         "SRCROOT",
+        "stackexchange",
         "sunnyxx",
         "tinypng",
         "Typecheck",
