--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,5 +109,11 @@
         "xcodeproj",
         "xcworkspace",
         "Yilong"
+    ],
+    "grammarly.selectors": [
+        {
+            "language": "markdown",
+            "scheme": "file"
+        }
     ]
 }
