Updating `cSpell.words`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "Alamofire",
         "appdir",
         "archlinux",
+        "ARCHS",
+        "armv",
         "automake",
         "automerge",
         "Autorelease",
@@ -41,6 +43,8 @@
         "icestorm",
         "idempotence",
         "INFOPATH",
+        "iphoneos",
+        "iphonesimulator",
         "koalaman",
         "LIBDIR",
         "libgpg",
@@ -49,6 +53,7 @@
         "libunistring",
         "libyaml",
         "linuxbrew",
+        "lipo",
         "livecheck",
         "macports",
         "MAKEFLAGS",
@@ -56,6 +61,7 @@
         "mdimporterdir",
         "methoddir",
         "mkdir",
+        "mktemp",
         "MVVM",
         "mypath",
         "myscript",
@@ -65,6 +71,7 @@
         "octa",
         "pacman",
         "pcre",
+        "pipefail",
         "pkgconfig",
         "plugindir",
         "Podfile",
@@ -78,6 +85,7 @@
         "qlplugindir",
         "Rakefile",
         "rbtree",
+        "rdar",
         "readall",
         "readline",
         "realpath",
@@ -86,6 +94,7 @@
         "repology",
         "rubocop",
         "rubygems",
+        "Runpath",
         "saverdir",
         "SDKROOT",
         "servicedir",
@@ -94,8 +103,11 @@
         "shellenv",
         "SRCROOT",
         "stackexchange",
+        "struct",
         "sunnyxx",
+        "swiftmodule",
         "tinypng",
+        "TOOLCHAINS",
         "Typecheck",
         "unbottled",
         "unbrewed",
@@ -106,28 +118,14 @@
         "venv",
         "virtualenv",
         "WHALEBREW",
-        "xcodeproj",
-        "xcworkspace",
-        "Yilong",
-        "Alamofire",
-        "ARCHS",
-        "armv",
-        "CocoaPods",
-        "iphoneos",
-        "iphonesimulator",
-        "lipo",
-        "mktemp",
-        "pipefail",
-        "Podfile",
-        "rdar",
-        "Runpath",
-        "swiftmodule",
-        "TOOLCHAINS",
         "XCCONFIG",
         "xcframework",
         "xcframeworks",
         "xcodebuild",
-        "xcrun"
+        "xcodeproj",
+        "xcrun",
+        "xcworkspace",
+        "Yilong"
     ],
     "grammarly.selectors": [
         {
