--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "myscripts",
         "nixpkgs",
         "nokogiri",
+        "NSURL",
         "octa",
         "pacman",
         "pcre",
@@ -95,6 +96,7 @@
         "rubocop",
         "rubygems",
         "Runpath",
+        "sandboxed",
         "saverdir",
         "SDKROOT",
         "servicedir",
