Updating `AuthenticationAndCredentials.md`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
         "MANPATH",
         "mdimporterdir",
         "methoddir",
+        "MITM",
         "mkdir",
         "mktemp",
         "MVVM",
