Update URLSession doc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
         "SRCROOT",
         "stackexchange",
         "struct",
+        "subview",
         "sunnyxx",
         "swiftmodule",
         "tinypng",
