Adding `Alamofire.md`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "archlinux",
         "ARCHS",
         "armv",
+        "associatedtype",
         "automake",
         "automerge",
         "Autorelease",
