--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "icestorm",
         "idempotence",
         "INFOPATH",
+        "inout",
         "iphoneos",
         "iphonesimulator",
         "koalaman",
@@ -114,6 +115,7 @@
         "swiftmodule",
         "tinypng",
         "TOOLCHAINS",
+        "typealias",
         "Typecheck",
         "unbottled",
         "unbrewed",
