--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "GEMNAME",
         "gempath",
         "gettext",
+        "gitbook",
         "ibireme",
         "icestorm",
         "idempotence",
@@ -47,6 +48,7 @@
         "inout",
         "iphoneos",
         "iphonesimulator",
+        "jython",
         "koalaman",
         "LIBDIR",
         "libgpg",
