--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "inout",
         "iphoneos",
         "iphonesimulator",
+        "jupyterlab",
         "jython",
         "koalaman",
         "LIBDIR",
@@ -71,6 +72,7 @@
         "mypath",
         "myscript",
         "myscripts",
+        "nbviewer",
         "nixpkgs",
         "nokogiri",
         "NSURL",
