--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,8 +63,10 @@
         "macports",
         "MAKEFLAGS",
         "MANPATH",
+        "Matplotlib",
         "mdimporterdir",
         "methoddir",
+        "Miniconda",
         "MITM",
         "mkdir",
         "mktemp",
