--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "nbviewer",
         "nixpkgs",
         "nokogiri",
+        "nonnull",
         "NSURL",
         "NTLM",
         "octa",
@@ -91,6 +92,7 @@
         "prefpanedir",
         "prepended",
         "prepending",
+        "progfile",
         "pyenv",
         "pypy",
         "qlplugindir",
@@ -101,6 +103,7 @@
         "readline",
         "realpath",
         "rebottle",
+        "regexpr",
         "remotesources",
         "repology",
         "rubocop",
