--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "ABABABC",
+        "ABABC",
+        "ABBBC",
+        "ABBC",
         "aclocal",
+        "AEIOU",
         "Alamofire",
         "appdir",
         "archlinux",
@@ -65,6 +70,8 @@
         "MANPATH",
         "Matplotlib",
         "mdimporterdir",
+        "metacharacter",
+        "metacharacters",
         "methoddir",
         "Miniconda",
         "MITM",
