--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,7 @@
         "NSURL",
         "NTLM",
         "octa",
+        "OFMT",
         "pacman",
         "pcre",
         "pipefail",
@@ -113,6 +114,8 @@
         "regexpr",
         "remotesources",
         "repology",
+        "RLENGTH",
+        "RSTART",
         "rubocop",
         "rubygems",
         "Runpath",
@@ -126,6 +129,7 @@
         "SRCROOT",
         "stackexchange",
         "struct",
+        "SUBSEP",
         "subview",
         "sunnyxx",
         "swiftmodule",
