--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "aclocal",
         "AEIOU",
         "Alamofire",
+        "anan",
+        "anda",
         "appdir",
         "archlinux",
         "ARCHS",
@@ -18,6 +20,7 @@
         "autoremove",
         "autosquash",
         "autosquashing",
+        "babanabanaba",
         "behaviour",
         "BOOTSNAP",
         "Brewfile",
@@ -46,6 +49,7 @@
         "gempath",
         "gettext",
         "gitbook",
+        "gsub",
         "ibireme",
         "icestorm",
         "idempotence",
@@ -126,10 +130,13 @@
         "shellcheck",
         "shellcheckrc",
         "shellenv",
+        "sprintf",
+        "srand",
         "SRCROOT",
         "stackexchange",
         "struct",
         "SUBSEP",
+        "substr",
         "subview",
         "sunnyxx",
         "swiftmodule",
