--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,9 +44,11 @@
         "EPEL",
         "favourite",
         "fontdir",
+        "Fsep",
         "gemdir",
         "GEMNAME",
         "gempath",
+        "getline",
         "gettext",
         "gitbook",
         "gsub",
@@ -130,6 +132,7 @@
         "shellcheck",
         "shellcheckrc",
         "shellenv",
+        "SNOBOL",
         "sprintf",
         "srand",
         "SRCROOT",
