--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
         "inout",
         "iphoneos",
         "iphonesimulator",
+        "isnum",
         "jupyterlab",
         "jython",
         "koalaman",
@@ -75,6 +76,7 @@
         "MAKEFLAGS",
         "MANPATH",
         "Matplotlib",
+        "maxfld",
         "mdimporterdir",
         "metacharacter",
         "metacharacters",
@@ -88,11 +90,13 @@
         "myscript",
         "myscripts",
         "nbviewer",
+        "nfld",
         "nixpkgs",
         "nokogiri",
         "nonnull",
         "NSURL",
         "NTLM",
+        "numcol",
         "octa",
         "OFMT",
         "pacman",
