--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "ABBBC",
         "ABBC",
         "aclocal",
+        "addcomma",
         "AEIOU",
         "Alamofire",
         "anan",
@@ -114,6 +115,7 @@
         "pyenv",
         "pypy",
         "qlplugindir",
+        "Quantiles",
         "Rakefile",
         "rbtree",
         "rdar",
@@ -145,6 +147,7 @@
         "SUBSEP",
         "substr",
         "subview",
+        "sumcomma",
         "sunnyxx",
         "swiftmodule",
         "tinypng",
