--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "ABBC",
         "aclocal",
         "addcomma",
+        "addroot",
         "AEIOU",
         "Alamofire",
         "anan",
@@ -27,6 +28,9 @@
         "Brewfile",
         "Cartfile",
         "centralised",
+        "cerror",
+        "checkdev",
+        "checkdupl",
         "choco",
         "CMAKE",
         "CocoaPods",
@@ -46,6 +50,7 @@
         "favourite",
         "fontdir",
         "Fsep",
+        "funmount",
         "gemdir",
         "GEMNAME",
         "gempath",
@@ -57,7 +62,9 @@
         "icestorm",
         "idempotence",
         "INFOPATH",
+        "initnum",
         "inout",
+        "intowords",
         "iphoneos",
         "iphonesimulator",
         "isnum",
@@ -98,6 +105,8 @@
         "NSURL",
         "NTLM",
         "numcol",
+        "nums",
+        "numtowords",
         "octa",
         "OFMT",
         "pacman",
@@ -108,6 +117,7 @@
         "Podfile",
         "PODNAME",
         "podspec",
+        "prchecks",
         "prefpanedir",
         "prepended",
         "prepending",
