--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "cerror",
         "checkdev",
         "checkdupl",
+        "checkgen",
         "choco",
         "CMAKE",
         "CocoaPods",
