--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "archlinux",
         "ARCHS",
         "armv",
+        "asplit",
         "associatedtype",
         "automake",
         "automerge",
@@ -38,6 +39,7 @@
         "Codacy",
         "colcheck",
         "colorpickerdir",
+        "compat",
         "conda",
         "coreutils",
         "Deinitialization",
@@ -50,6 +52,7 @@
         "dotfiles",
         "EPEL",
         "favourite",
+        "fcns",
         "fontdir",
         "Fsep",
         "funmount",
@@ -169,6 +172,7 @@
         "unbottled",
         "unbrewed",
         "unbuffered",
+        "Unbundle",
         "Uninstallation",
         "Unportable",
         "unversioned",
