--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
         "discoverability",
         "distros",
         "dotfiles",
+        "EEST",
         "EPEL",
         "favourite",
         "fcns",
