--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -161,6 +161,8 @@
         "stackexchange",
         "struct",
         "SUBSEP",
+        "subshell",
+        "subshells",
         "substr",
         "subview",
         "sumcomma",
