--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "aclocal",
         "addcomma",
         "addroot",
+        "addup",
         "AEIOU",
         "Alamofire",
         "anan",
@@ -62,6 +63,7 @@
         "gempath",
         "getline",
         "gettext",
+        "Getwell",
         "gitbook",
         "gsub",
         "ibireme",
@@ -77,6 +79,7 @@
         "jupyterlab",
         "jython",
         "koalaman",
+        "Lafite",
         "LIBDIR",
         "libgpg",
         "libidn",
@@ -151,6 +154,7 @@
         "sandboxed",
         "saverdir",
         "SDKROOT",
+        "Seminumerical",
         "servicedir",
         "shellcheck",
         "shellcheckrc",
