Update "Keychain Services"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
         "isnum",
         "jupyterlab",
         "jython",
+        "Keychains",
         "koalaman",
         "Lafite",
         "LIBDIR",
