--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "koalaman",
         "Lafite",
         "LIBDIR",
+        "libexec",
         "libgpg",
         "libidn",
         "libksba",
