--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,10 +76,12 @@
         "iphoneos",
         "iphonesimulator",
         "isnum",
+        "jetbrains",
         "jupyterlab",
         "jython",
         "Keychains",
         "koalaman",
+        "kotlinx",
         "Lafite",
         "LIBDIR",
         "libexec",
@@ -133,6 +135,7 @@
         "prefpanedir",
         "prepended",
         "prepending",
+        "println",
         "progfile",
         "pyenv",
         "pypy",
@@ -174,6 +177,7 @@
         "subview",
         "sumcomma",
         "sunnyxx",
+        "suspendable",
         "swiftmodule",
         "tinypng",
         "TOOLCHAINS",
