Add Note for `CryptoKit`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "Getwell",
         "gitbook",
         "gsub",
+        "HMAC",
         "ibireme",
         "icestorm",
         "idempotence",
