--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,11 +43,13 @@
         "compat",
         "conda",
         "coreutils",
+        "Cypto",
         "Deinitialization",
         "delim",
         "deps",
         "destdir",
         "dictionarydir",
+        "Diffie",
         "discoverability",
         "distros",
         "dotfiles",
@@ -113,6 +115,7 @@
         "myscript",
         "myscripts",
         "nbviewer",
+        "Netplan",
         "nfld",
         "nixpkgs",
         "nokogiri",
